gatewayapi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: foo
spec:
  parentRefs:
    - name: prod-web
  rules:
    - backendRefs:
        - name: foo-svc
          port: 8080
